# LayeredImage

./: .gitignore  CHANGELOG.md  DOCS.md  LAYERED_SPEC.md  README.md  convert.py  pyproject.toml  requirements.txt  setup.py
.github/workflows/: mirror-to-codeberg.yaml
DOCS/: README.md  blend.md  io.md  layeredimage.md  layergroup.md  readme.md
DOCS/layeredimage/: blend.md  index.md  io.md  layeredimage.md  layergroup.md
DOCS/layeredimage/io/: common.md  gif.md  index.md  layered.md  lsr.md  ora.md  pdn.md  psd.md  tiff.md  webp.md  xcf.md
documentation/reference/: README.md
documentation/reference/layeredimage/: blend.md  index.md  layeredimage.md  layergroup.md
documentation/reference/layeredimage/io/: common.md  gif.md  index.md  layered.md  lsr.md  ora.md  pdn.md  psd.md  tiff.md  webp.md  xcf.md
layeredimage/: __init__.py  blend.py  io.py  layeredimage.py  layergroup.py
layeredimage/io/: __init__.py  common.py  gif.py  layered.py  lsr.py  ora.py  pdn.py  psd.py  tiff.py  webp.py  xcf.py
readme-assets/icons/: LayeredImage.xcf
test/: README.md  base24(gif).ora  base24(layered).ora  base24(layeredc).ora  base24(lsr).lsr  base24(lsr).ora  base24(ora).layered  base24(ora).layeredc  base24(ora).ora  base24(pdn).ora  base24(psd).ora  base24(tiff).ora  base24(webp).ora  base24(xcf).ora  base24.layered  base24.ora  base24.pdn  base24.psd  base24.xcf  test.py
test/data/: gif_output.ora  layered_image.layeredc  layered_image.ora  layered_image.xcf  layeredc_output.ora  lsr_output.ora  ora_output.layered  ora_output.layeredc  pdn_output.ora
tests/: README.md  test_layeredimage.py  test_layergroup.py  test_main.py
tests/data/: gif_output.ora  layered_image.lsr  layered_image.psd  layered_output.ora  layeredc_output.ora  lsr_output.lsr  lsr_output.ora  ora_output.layered  ora_output.layeredc  ora_output.ora  pdn_output.ora  psd_output.ora  tiff_output.ora  webp_output.ora  xcf_output.ora
