[tool.poetry]
name = "layeredimage"
version = "2024.2.1"
license = "mit"
description = "Use this module to read, and write to a number of layered image formats"
authors = ["FredHappyface"]
classifiers = [
	"Environment :: Console",
	"Development Status :: 5 - Production/Stable",
	"Intended Audience :: Developers",
	"Intended Audience :: Education",
	"Natural Language :: English",
	"Operating System :: OS Independent",
	"Programming Language :: Python :: Implementation :: CPython",
	"Topic :: Multimedia :: Graphics",
	"Topic :: Software Development :: Libraries :: Python Modules",
	"Topic :: Utilities",
]
homepage = "https://github.com/FHPythonUtils/LayeredImage"
repository = "https://github.com/FHPythonUtils/LayeredImage"
documentation = "https://github.com/FHPythonUtils/LayeredImage/blob/master/README.md"
readme = "README.md"

[tool.poetry.dependencies]
python = ">=3.9,<4.0"
blendmodes = "<2026,>=2024.1"
pylsr = "<2026,>=2024"
pyora = "<2,>=0.3.11"
pypdn = "<2,>=1.0.6"
psd-tools = "<2,>=1.9.31"
pillow = "<11,>=10.2.0"
gimpformats = "<2025,>=2023.1"
loguru = "<2,>=0.7.2"

[tool.poetry.group.dev.dependencies]
imgcompare = "^2.0.1"
pytest = "^8.1.1"
handsdown = "^2.1.0"
coverage = "^7.4.4"
ruff = "^0.2.2"
pyright = "^1.1.354"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.ruff]
line-length = 100
indent-width = 4
target-version = "py38"

[tool.ruff.lint]
select = ["ALL"]
ignore = [
	"ANN101",  # type annotation for self in method
	"COM812",  # enforce trailing comma
	"D2",  # pydocstyle formatting
	"ISC001",
	"N",  # pep8 naming
	"PLR09",  # pylint refactor too many
	"TCH",  # type check blocks
	"W191"  # ignore this to allow tabs
]
fixable = ["ALL"]

[tool.ruff.lint.per-file-ignores]
"**/{tests,docs,tools}/*" = ["D", "S101", "E402"]

[tool.ruff.lint.flake8-tidy-imports]
ban-relative-imports = "all" # Disallow all relative imports.

[tool.ruff.format]
indent-style = "tab"
docstring-code-format = true
line-ending = "lf"

[tool.pyright]
venvPath = "."
venv = ".venv"

[tool.coverage.run]
branch = true

[tool.tox]
legacy_tox_ini = """
[tox]
env_list =
	py311
	py310
	py39
	py38

[testenv]
deps =
	imgcompare
	pytest
commands = pytest tests
"""
