[project]
name = "layeredimage"
version = "2025"
description = "Use this module to read, and write to a number of layered image formats"
authors = [{ name = "FredHappyface" }]
requires-python = ">=3.9,<4.0"
readme = "README.md"
license = "mit"
classifiers = [
    "Environment :: Console",
    "Development Status :: 5 - Production/Stable",
    "Intended Audience :: Developers",
    "Intended Audience :: Education",
    "Natural Language :: English",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: Implementation :: CPython",
    "Topic :: Multimedia :: Graphics",
    "Topic :: Software Development :: Libraries :: Python Modules",
    "Topic :: Utilities",
]
dependencies = [
    "blendmodes>=2025",
    "gimpformats>=2025",
    "loguru>=0.7.3",
    "pillow>=10.4.0",
    "psd-tools>=1.10.6",
    "pylsr>=2024",
    "pyora>=0.3.11",
    "pypdn>=1.0.6",
]

[project.urls]
Homepage = "https://github.com/FHPythonUtils/LayeredImage"
Repository = "https://github.com/FHPythonUtils/LayeredImage"
Documentation = "https://github.com/FHPythonUtils/LayeredImage/blob/master/README.md"

[dependency-groups]
dev = [
    "coverage>=7.6.12",
    "handsdown>=2.1.0",
    "imgcompare>=2.0.1",
    "pyright>=1.1.394",
    "pytest>=8.3.4",
    "ruff>=0.9.7",
]

[tool.ruff]
line-length = 100
indent-width = 4
target-version = "py38"

[tool.ruff.lint]
select = ["ALL"]
ignore = [
	"COM812",  # enforce trailing comma
	"D2",  # pydocstyle formatting
	"ISC001",
	"N",  # pep8 naming
	"PLR09",  # pylint refactor too many
	"TCH",  # type check blocks
	"W191"  # ignore this to allow tabs
]
fixable = ["ALL"]

[tool.ruff.lint.per-file-ignores]
"**/{tests,docs,tools}/*" = ["D", "S101", "E402"]

[tool.ruff.lint.flake8-tidy-imports]
ban-relative-imports = "all" # Disallow all relative imports.

[tool.ruff.format]
indent-style = "tab"
docstring-code-format = true
line-ending = "lf"

[tool.pyright]
venvPath = "."
venv = ".venv"

[tool.coverage.run]
branch = true

[tool.tox]
legacy_tox_ini = """
[tox]
env_list =
	py311
	py310
	py39
	py38

[testenv]
deps =
	imgcompare
	pytest
commands = pytest tests
"""

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
